correct image path

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <div class="car-image-container">
-      <img src="../images/2.webp" loading="lazy" alt="Car" class="car-image" />
+      <img
+        src="assets/images/2.webp"
+        loading="lazy"
+        alt="Car"
+        class="car-image"
+      />
       <main class="main">
         <div class="title">Auto Insurance in America</div>
         <div class="title-description">
@@ -431,7 +436,7 @@
         </div>
         <div class="image-section">
           <img
-            src="/images/safe.webp"
+            src="assets/images/safe.webp"
             loading="lazy"
             alt="Image"
             width="100%"
