--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="car-image-container">
       <img
-        src="/assets/images/2.webp"
+        src="/my-project/assets/images/2.webp"
         loading="lazy"
         alt="Car"
         class="car-image"
@@ -436,7 +436,7 @@
         </div>
         <div class="image-section">
           <img
-            src="/assets/images/safe.webp"
+            src="/my-project/assets/images/safe.webp"
             loading="lazy"
             alt="Image"
             width="100%"
