--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <div class="car-image-container">
-      <img src="/carInsuranceTest/images/2.webp" alt="Car" class="car-image" />
+      <img
+        src="/carInsuranceTest/images/2.webp"
+        loading="lazy"
+        alt="Car"
+        class="car-image"
+      />
       <main class="main">
         <div class="title">Auto Insurance in America</div>
         <div class="title-description">
