--- a/index.html
+++ b/index.html
@@ -392,6 +392,7 @@
         </div>
       </div>
     </section>
+    <div class="line"></div>
     <div class="form-container">
       <div class="form-and-image">
         <div class="form-section">
