--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
           America. If you're looking to get insurance at the most affordable
           price, our team is here to help you make it happen.
         </div>
+        <button class="call-to-action" onclick="scrollToForm()">
+          <span>Let's get started</span>
+          <svg
+            width="32"
+            height="32"
+            viewBox="0 0 32 32"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M27.3538 16.3535L18.3538 25.3535C18.2599 25.4474 18.1327 25.5001 18 25.5001C17.8673 25.5001 17.7401 25.4474 17.6462 25.3535C17.5524 25.2597 17.4997 25.1325 17.4997 24.9998C17.4997 24.8671 17.5524 24.7399 17.6462 24.646L25.7925 16.4998H5C4.86739 16.4998 4.74021 16.4471 4.64645 16.3533C4.55268 16.2596 4.5 16.1324 4.5 15.9998C4.5 15.8672 4.55268 15.74 4.64645 15.6462C4.74021 15.5525 4.86739 15.4998 5 15.4998H25.7925L17.6462 7.35354C17.5524 7.25972 17.4997 7.13247 17.4997 6.99979C17.4997 6.86711 17.5524 6.73986 17.6462 6.64604C17.7401 6.55222 17.8673 6.49951 18 6.49951C18.1327 6.49951 18.2599 6.55222 18.3538 6.64604L27.3538 15.646C27.4002 15.6925 27.4371 15.7476 27.4623 15.8083C27.4874 15.869 27.5004 15.9341 27.5004 15.9998C27.5004 16.0655 27.4874 16.1306 27.4623 16.1913C27.4371 16.252 27.4002 16.3071 27.3538 16.3535Z"
+              fill="#ffffff"
+            />
+          </svg>
+        </button>
       </main>
     </div>
     <header class="header">
@@ -392,7 +407,7 @@
         </div>
       </div>
     </section>
-    <div class="line"></div>
+    <div class="line" id="contactForm"></div>
     <div class="form-container">
       <div class="form-and-image">
         <div class="form-section">
