added cannonical url

--- a/index.html
+++ b/index.html
@@ -5,15 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Car insurance</title>
     <link rel="stylesheet" href="css/style.css" />
+
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
+    <link
+      rel="icon"
+      sizes="192x192"
+      href="/images/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      sizes="512x512"
+      href="/images/android-chrome-512x512.png"
+    />
+
+    <title>Affordable Car Insurance | Get the Best Auto Insurance Quotes</title>
+    <meta
+      name="description"
+      content="Find affordable car insurance tailored to your needs. Compare auto insurance quotes, explore coverage options, and save on your car insurance today!"
+    />
+    <meta
+      name="keywords"
+      content="car insurance, affordable car insurance, auto insurance, vehicle insurance, car insurance quotes, best car insurance, cheap car insurance"
+    />
+    <meta name="author" content="CarInsurancePro" />
+    <meta name="robots" content="index, follow" />
+
+    <link
+      rel="canonical"
+      href="https://github.com/randomtext1/carInsuranceTest"
+    />
   </head>
   <body>
     <div class="car-image-container">
-      <img
-        src="/carInsuranceTest/images/2.webp"
-        loading="lazy"
-        alt="Car"
-        class="car-image"
-      />
+      <img src="/images/2.webp" loading="lazy" alt="Car" class="car-image" />
       <main class="main">
         <div class="title">Auto Insurance in America</div>
         <div class="title-description">
