--- a/index.html
+++ b/index.html
@@ -6,17 +6,24 @@
     <title>Car insurance</title>
     <link rel="stylesheet" href="css/style.css" />
 
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
+    <link
+      rel="icon"
+      href="/carInsuranceTest/images/favicon.ico"
+      type="image/x-icon"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/carInsuranceTest/images/apple-touch-icon.png"
+    />
     <link
       rel="icon"
       sizes="192x192"
-      href="/images/android-chrome-192x192.png"
+      href="/carInsuranceTest/images/android-chrome-192x192.png"
     />
     <link
       rel="icon"
       sizes="512x512"
-      href="/images/android-chrome-512x512.png"
+      href="/carInsuranceTest/images/android-chrome-512x512.png"
     />
 
     <title>Affordable Car Insurance | Get the Best Auto Insurance Quotes</title>
@@ -38,7 +45,12 @@
   </head>
   <body>
     <div class="car-image-container">
-      <img src="/images/2.webp" loading="lazy" alt="Car" class="car-image" />
+      <img
+        src="/carInsuranceTest/images/2.webp"
+        loading="lazy"
+        alt="Car"
+        class="car-image"
+      />
       <main class="main">
         <div class="title">Auto Insurance in America</div>
         <div class="title-description">
